# cust

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  release.yml
cust/: Cargo.toml
cust/src/: build.rs  clang.rs  cli.rs  cmake_emit.rs  diag_rewrite.rs  generate.rs  lock.rs  main.rs  manifest.rs  mod_scanner.rs  modules.rs  new.rs  plugin.rs  prelude.h  profile.rs  target_layout.rs  test_discovery.rs  test_runner.rs  test_runner_template.c  test_scanner.rs  workspace.rs
cust/src/cmake_emit/: tests.rs
cust/src/cmake_emit/testdata/: cwork.cmake
cust/tests/: cli.rs
cust/tests/cli/: binaries.rs  build_check.rs  common.rs  internal.rs  manifest.rs  modules.rs  plugin.rs  scaffold.rs  test_cmd.rs  workspace.rs
cust/tests/fixtures/bad_name/: Cust.toml
cust/tests/fixtures/bin_argv/: Cust.toml
cust/tests/fixtures/bin_argv/src/: main.c
cust/tests/fixtures/bin_only/: Cust.toml
cust/tests/fixtures/bin_only/src/: main.c
cust/tests/fixtures/cross_module_typedef/: Cust.toml
cust/tests/fixtures/cross_module_typedef/src/: lib.c  mem.c  types.c
cust/tests/fixtures/hello/: Cust.toml
cust/tests/fixtures/hello/src/: lib.c
cust/tests/fixtures/lib_and_bin/: Cust.toml
cust/tests/fixtures/lib_and_bin/src/: lib.c  main.c
cust/tests/fixtures/lib_depends_on_bin/: Cust.toml
cust/tests/fixtures/lib_depends_on_bin/bin_member/: Cust.toml
cust/tests/fixtures/lib_depends_on_bin/bin_member/src/: main.c
cust/tests/fixtures/lib_depends_on_bin/lib_member/: Cust.toml
cust/tests/fixtures/lib_depends_on_bin/lib_member/src/: lib.c
cust/tests/fixtures/missing_source/: Cust.toml
cust/tests/fixtures/module_ambiguous/: Cust.toml
cust/tests/fixtures/module_ambiguous/src/: foo.c  lib.c
cust/tests/fixtures/module_ambiguous/src/foo/: mod.c
cust/tests/fixtures/module_missing/: Cust.toml
cust/tests/fixtures/module_missing/src/: lib.c
cust/tests/fixtures/multi_bin/: Cust.toml
cust/tests/fixtures/multi_bin/src/: lib.c  main.c
cust/tests/fixtures/multi_bin_ws/a/: Cust.toml
cust/tests/fixtures/multi_bin_ws/a/src/: main.c
cust/tests/fixtures/multi_bin_ws/b/: Cust.toml
cust/tests/fixtures/multi_bin_ws/b/src/: main.c
cust/tests/fixtures/multi_module/: Cust.toml
cust/tests/fixtures/multi_module/src/: lib.c  util.c
cust/tests/fixtures/multi_module/src/parser/: mod.c
cust/tests/fixtures/path_dep_no_workspace/: Cust.toml
cust/tests/fixtures/populated_deps/: Cust.toml
cust/tests/fixtures/populated_deps/src/: lib.c
cust/tests/fixtures/pub_repr_cycle/: Cust.toml
cust/tests/fixtures/pub_repr_cycle/src/: a.c  b.c  lib.c
cust/tests/fixtures/unknown_field/: Cust.toml
cust/tests/fixtures/unknown_field/src/: lib.c
cust/tests/fixtures/use_crate_not_supported/: Cust.toml
cust/tests/fixtures/use_crate_not_supported/src/: lib.c  util.c
cust/tests/fixtures/use_crate_unknown/: Cust.toml
cust/tests/fixtures/use_crate_unknown/src/: lib.c
cust/tests/fixtures/use_crate_works/: Cust.toml
cust/tests/fixtures/use_crate_works/src/: lib.c  util.c
cust/tests/fixtures/with_itests/: Cust.toml
cust/tests/fixtures/with_itests/src/: lib.c
cust/tests/fixtures/with_itests/tests/: basic.c  extra.c
cust/tests/fixtures/with_tests/: Cust.toml
cust/tests/fixtures/with_tests/src/: lib.c
cust/tests/fixtures/workspace_basic/: Cust.toml
cust/tests/fixtures/workspace_basic/util/: Cust.toml
cust/tests/fixtures/workspace_basic/util/src/: lib.c
cust/tests/fixtures/workspace_bin_lib/: Cust.toml
cust/tests/fixtures/workspace_bin_lib/app/: Cust.toml
cust/tests/fixtures/workspace_bin_lib/app/src/: main.c
cust/tests/fixtures/workspace_bin_lib/util/src/: lib.c
cust/tests/fixtures/workspace_cycle/a/: Cust.toml
cust/tests/fixtures/workspace_cycle/b/: Cust.toml
cust/tests/fixtures/workspace_three/: Cust.toml
cust/tests/fixtures/workspace_three/app/: Cust.toml
cust/tests/fixtures/workspace_three/app/src/: lib.c
cust/tests/fixtures/workspace_three/extra/: Cust.toml
cust/tests/fixtures/workspace_three/extra/src/: lib.c
cust/tests/fixtures/workspace_undeclared_dep/app/: Cust.toml
cust/tests/fixtures/workspace_undeclared_dep/app/src/: lib.c
cwork/: Cust.toml  README.md
docs/design/: cmake-and-portability.md  cust-design.md  implementation-language.md  incremental-check.md  prior-art-musto.md  v0.1.md  v0.2.md  v0.3.1.md  v0.3.2.md  v0.3.md  v0.4.0.md  v0.4.1.md  v0.4.2.md  v0.4.3.md  v0.4.4.md  v0.4.5.md  v0.4.6-test-codegen.md
docs/spec/: cust-lock.md
plugin/: CMakeLists.txt
plugin-build/: Cargo.toml
plugin-build/src/: main.rs
plugin/src/: plugin.cc
plugin/test/: CMakeLists.txt  run_annotate_rejected_test.sh  run_golden_test.sh  run_internal_linkage_test.sh  run_phase_isolation_test.sh  run_recognition_test.sh  run_repr_errors_test.sh  run_sidecar_test.sh  run_test_errors_test.sh
plugin/test/fixtures/: test_annotate_rejected.c  test_c23_pub_recognition.c  test_phase_isolation.c  test_pub_repr_body.c  test_pub_repr_errors.c  test_test_sidecar.c  test_test_signature_errors.c
plugin/test/goldens/: test_pub_repr_body.cust.h
scripts/: install.sh
(+16 files in other folders)
