[package]
name        = "cust"
description = "A Cargo-style build system for C (clang-only)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lints]
workspace = true

[[bin]]
name = "cust"
path = "src/main.rs"

[dependencies]
