[package]
name        = "cust"
description = "A Cargo-style build system for C (clang-only)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lints]
workspace = true

[[bin]]
name = "cust"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
# v0.4.2 (V42D-8): configure-skip stamp hashes the generated
# CMakeLists.txt bytes concatenated with the plugin .so bytes.
sha2 = "0.10.9"
toml = "1.1.2"

[dev-dependencies]
tempfile = "3.27.0"
