[package]
name        = "plugin-build"
description = "Build helper that drives CMake to compile the cust clang plugin."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lints]
workspace = true

[[bin]]
name = "plugin-build"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
